# Market-Trend-Predictor

./: README.md  app.js  config.py  index.html  market_predictor.py  pipeline_architecture.mmd  pyproject.toml  requirements.txt  setup.py  styles.css
app/: index.html
data/: README.md
docs/diagrams/: architecture.mmd
src/: market_predictor.py
tests/: test_market_predictor.py
